--- a/OdeyTech.WPF.Example.Hospital/Properties/Resources.resx
+++ b/OdeyTech.WPF.Example.Hospital/Properties/Resources.resx
@@ -117,8 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\View\Images\add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="AddButtonTitle" xml:space="preserve">
     <value>Add</value>
+  </data>
+  <data name="AddButtonToolTip" xml:space="preserve">
+    <value>Add a new patient record</value>
   </data>
   <data name="Address" xml:space="preserve">
     <value>Address</value>
@@ -141,14 +148,17 @@
   <data name="DeleteConfirmationMessage" xml:space="preserve">
     <value>You are about to delete {0} items. Do you want to continue?</value>
   </data>
+  <data name="Edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\View\Images\edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="EditButtonTitle" xml:space="preserve">
     <value>Edit</value>
   </data>
+  <data name="EditButtonToolTip" xml:space="preserve">
+    <value>Edit the selected patient record</value>
+  </data>
   <data name="ErrorView" xml:space="preserve">
     <value>Error</value>
-  </data>
-  <data name="GridIndex" xml:space="preserve">
-    <value>#</value>
   </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
@@ -177,8 +187,14 @@
   <data name="Postcode" xml:space="preserve">
     <value>Postcode</value>
   </data>
+  <data name="Remove" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\View\Images\remove.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="RemoveButtonTitle" xml:space="preserve">
     <value>Remove</value>
+  </data>
+  <data name="RemoveButtonToolTip" xml:space="preserve">
+    <value>Remove the selected patient record</value>
   </data>
   <data name="Save" xml:space="preserve">
     <value>Save</value>
